* UTIL argument 'outputformatset' another bugfix to define "set commands" correct
* class customURLProfile - bugfix to create correct "set commands" for version 91
* UTIL type=device - bugfix actions=DefaultSecurityRule-remove-override if no override is availalbe
* UTIL argument outputformatset | bugfix for zone-protection-profile - combine multiple set commands related to 'flood xyz red'

GENERAL:
* class PanAPIConnector | introduce method commitAll() and commitPartial( $user)
* framework | split README into multiple files to get better introduction
* framework | introduce new example - improve the example template
* framework | introduce bash script "create_all_docker_container.sh"


2.0.29 (20220204)
UTILS:
* UTIL type=tag-merger | introduce help info for dupalgorithm=SameName
* UTIL all types | argument "outputformatset" status BETA - return all "set/delete commands" done by a PAN-OS-PHP UTIL script
* class UTIL | improve error handling for file not found if shadow-json is used
* UTIL type=securityprofilegroup | actions=securityProfile-Set - extend output if Profile is not found and skipped

BUGFIX:
* UTIL type=device | actions=securityprofile-create-alert-only - bugfix for PAN-OS 8.1 - including fix for ironskillet download
* class PanoramaConf | bugfix to handle initial PAN-OS panorama config files
* UTIL type=address / service actions=move:childDG | bugfix - correct nested object search and create XMLnode if not available

GENERAL:
* framework - update predefined to version 8519-7206
* update install scripts as for example ubuntu installation is only working correctly if root user is used
* framework - introduce update_pan-os-php.sh script


2.0.28 (20220124)
UTILS:
* UTIL pan-os-php type=device | introduce PAN-OS API for actions=devicegroup-create / template-create
* UTIL pan-os-php type=device | introduce actions=template-delete
* UTIL development | introduce visibility_playbook.php