@@ -40,6 +40,7 @@ BUGFIX:
 * class customURLProfile - bugfix to create correct "set commands" for version 91
 * UTIL type=device - bugfix actions=DefaultSecurityRule-remove-override if no override is availalbe
 * UTIL argument outputformatset | bugfix for zone-protection-profile - combine multiple set commands related to 'flood xyz red'
+* UTIL type=device actions=defaultsecurityrule-securityprofile-remove:false | bugfix to remove secprof correctly in API mode
 
 GENERAL:
 * class PanAPIConnector | introduce method commitAll() and commitPartial( $user)
